cloudformation/vpc.yaml
# AWSTemplateFormatVersion
# Description

AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation template for VPC'

Parameters:
  Environment:
    Type: String
    Default: test
    AllowedValues: 
      - test
      - staging
      - production
      
Resources:
# My VPC
  MyVPC: 
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '172.16.0.0/16' # since we already have a 10.0.0.0/16 vpc
      EnableDnsSupport: true # helps resolve DNS issues
      EnableDnsHostnames: true # allows use of hostnames
      Tags:
        - Key: Name
          Value: MyVPC
# Public subnet in AZ 1
  PublicSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.1.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true # automatically assign a public ip so it can reach the internet
      Tags:
      - Key: Name
        Value: PublicSubnet1A
# App private subnet in AZ 1
  AppPrivateSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.2.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
      - Key: Name
        Value: AppPrivateSubnet1A
# DB private subnet in AZ 1
  DataPrivateSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.3.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
      - Key: Name
        Value: DataPrivateSubnet1A
# Public subnet in AZ 2
  PublicSubnet2B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.4.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true # automatically assign a public ip so it can reach the internet
      Tags:
      - Key: Name
        Value: PublicSubnet2B
# App private subnet in AZ 2
  AppPrivateSubnet2B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.5.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
      - Key: Name
        Value: AppPrivateSubnet2B
# DB private subnet in AZ 2
  DataPrivateSubnet2B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.6.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
      - Key: Name
        Value: DataPrivateSubnet2B

# Internet Gateway IGW
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
      - Key: Name
        Value: MyVPC-IGW
<<<<<<< HEAD
      - Key: Environment
        Value: test
=======
>>>>>>> 77f23de578d39bb0948fc5a66d29697e790418ad

# Attach Gateway
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

# Route Table
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref MyVPC
      Tags:
      - Key: Name
        Value: PublicRouteTable

# Public Route
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

# Public Subnet 1A Route Table Association   
  PublicSubnet1ARouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1A
      RouteTableId: !Ref PublicRouteTable

# Public Subnet 1A Route Table Association   
  PublicSubnet2BRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2B
      RouteTableId: !Ref PublicRouteTable
    
<<<<<<< HEAD
=======
# Bastion Host EC2
  BastionHost:
    Type: 'AWS::EC2::Instance'    
    Properties:
      InstanceType: t3.micro
      KeyName: Bastion
      ImageId: ami-03ea746da1a2e36e7
      SubnetId: !Ref PublicSubnet1A
      SecurityGroupIds:
        - !Ref BastionSG
      Tags:
        - Key: Name
          Value: BastionHost

# Bastion Security Group
  BastionSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Enable SSH access'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 71.233.43.155/32

# AppInstance1A
  AppInstance1A:
    Type: 'AWS::EC2::Instance'  
    Properties:
      InstanceType: t3.micro
      KeyName: Bastion
      ImageId: ami-03ea746da1a2e36e7
      SubnetId: !Ref AppPrivateSubnet1A
      SecurityGroupIds:
        - !Ref AppInstance1ASG
      Tags:
        - Key: Name
          Value: App1


# AppInstance2B
  AppInstance2B:
    Type: 'AWS::EC2::Instance'  
    Properties:
      InstanceType: t3.micro
      KeyName: Bastion
      ImageId: ami-03ea746da1a2e36e7
      SubnetId: !Ref AppPrivateSubnet2B
      SecurityGroupIds:
        - !Ref AppInstance2BSG
      Tags:
        - Key: Name
          Value: App2          

#SG App 1A
  AppInstance1ASG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allow SSH from Bastion'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSG

#SG App 2B
  AppInstance2BSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allow ICMP Ping from App 1'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          SourceSecurityGroupId: !Ref AppInstance1ASG
        

>>>>>>> 77f23de578d39bb0948fc5a66d29697e790418ad
Outputs:
  MyVPC:
    Description: "Name of VPC that was created"
    Value: !Ref MyVPC
<<<<<<< HEAD
       git s
=======
       
>>>>>>> 77f23de578d39bb0948fc5a66d29697e790418ad
